--- a/index.html
+++ b/index.html
@@ -7,35 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9;
+      background: #f9f9f9;
       color: #222;
       padding: 20px;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    header h1 {
-      font-size: 1.8em;
       margin: 0;
     }
-
-    .date {
-      font-size: 1em;
-      color: #555;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      max-width: 700px;
-      margin: auto;
-    }
-
+    header { text-align: center; margin-bottom: 30px; }
+    header h1 { font-size: 1.8em; margin: 0; }
+    .date { font-size: 1em; color: #555; }
+    ul { list-style: none; padding: 0; max-width: 700px; margin: auto; }
     li {
       background: #fff;
       margin-bottom: 15px;
@@ -44,33 +25,16 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.08);
       transition: transform 0.1s;
     }
-
-    li:hover {
-      transform: scale(1.01);
-    }
-
-    a {
-      color: #0077cc;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #888;
-    }
+    li:hover { transform: scale(1.01); }
+    a { color: #0077cc; text-decoration: none; font-weight: 600; }
+    a:hover { text-decoration: underline; }
+    footer { text-align: center; margin-top: 40px; font-size: 0.9em; color: #888; }
   </style>
 </head>
 <body>
   <header>
     <h1>🗞️ Top 10 News Today</h1>
-    <p class="date">{{date}}</p>
+    <p class="date"><!-- DATE_PLACEHOLDER --></p>
   </header>
 
   <ul>
@@ -82,3 +46,4 @@
   </footer>
 </body>
 </html>
+  
